--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,91 +1,37 @@
-* {
-    padding: 0;
+*{
     margin: 0;
-    list-style: none;
-    box-sizing: border-box;
-    z-index: 1;
+    padding: 0;
 }
 
-main {
-    position: relative;
-    overflow: hidden;
+/* positioning navbar to the top of the page and stuck to the top */
+#nav-bar{
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
-
-nav {
-    z-index: 100;
-    /* position: fixed; */
-    height: 60px;
-    width: 100%;
-    display: flex !important;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.navbar-brand img{
+    height: 65px;
 }
-
-label.logo {
-    color: black;
-    font-size: 1.5rem;
-    font-family: "Goldman", sans-serif;
-    padding: 0.1rem 1rem;
-    font-weight: bold;
-    margin-bottom: 0;
+.navbar-nav li{
+    padding: 0 10px;
 }
-nav ul {
-    margin-bottom: 0;
-    margin-right: 20px;
-}
-nav ul li {
-    display: inline-block;
-    margin: 0.5rem;
+.navbar-nav li a{
     font-weight: 600;
-    font-family: "Inter", sans-serif;
-}
-nav ul li a {
     text-decoration: none !important;
-    color: black;
     font-size: 15px;
-    padding: 5px 11px;
+    padding: 5px 10px;
     border-radius: 3px;
-    position: relative;
     display: inline;
+    position: relative;
+    color: black;
 }
 
-nav button {
-    border-radius: 10px;
-    font-family: "Source Code Pro";
-    line-height: 1;
-    background: greenyellow;
-    padding: 0.6vw 0.5vw 0.6vw 0.5vw;
-    font-weight: 700;
-    border: none;
-    transition: all 300ms ease-in-out;
-    margin: 0.6rem;
+.navbar-nav li a:hover, /* psuedo class */
+.navbar-nav li a:focus {
+    color: rgba(12, 162, 5, 0.74);
 }
 
-@media only screen and (max-width: 600px) {
-    nav button {
-        display: none;
-    }
-
-    #check:checked ~ ul {
-        left: 0;
-        z-index: 5;
-    }
-
-}
-
-nav button:hover,
-nav button:focus {
-    transform: scale(1.05);
-    transition: all 300ms ease-in-out;
-}
-
-#menuItem li a:hover,
-#menuItem li a:focus {
-    color: #47c0a0;
-}
-
-#menuItem li a:before {
+.navbar-nav li :before {
     content: "";
     position: absolute;
     width: 100%;
@@ -95,81 +41,21 @@ nav button:focus {
     left: 0;
     background-color: #47c0a0;
     visibility: hidden;
-    -webkit-transform: scaleX(0);
+    -webkit-transform: scaleX(0);/*Applies a scale transform to the pseudo-element, scaling it horizontally to 0, effectively hiding it.*/
     transform: scaleX(0);
-    -webkit-transition: all 0.15s ease-in-out 0s;
+    -webkit-transition: all 0.15s ease-in-out 0s;/* Specifies the transition properties for the pseudo-element, defining the duration (0.15 seconds), easing function (ease-in-out), and delay (0 seconds) for any transitions that occur on the pseudo-element.*/
     transition: all 0.15s ease-in-out 0s;
 }
 
-#menuItem li a:hover:before,
-#menuItem li a.active:before {
+.navbar-nav li a:hover:before,
+.navbar-nav li a.active:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
 }
 
-#menuItem li a.active {
+.navbar-nav li a.active {
     color: #47c0a0 !important;
 }
 
-.checkbtn {
-    font-size: 30px;
-    color: black;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
 
-#check {
-    display: none;
-}
-
-@media (max-width: 1000px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
-    nav ul li a {
-        font-size: 16px;
-    }
-}
-@media (max-width: 1000px) {
-    .checkbtn {
-        display: block;
-    }
-
-    i {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-    }
-
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgba(80, 80, 80, 80);
-        top: 40px;
-        left: -100%;
-        text-align: center;
-        transition: all 0.5s;
-    }
-    nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a {
-        font-size: 20px;
-    }
-    a:hover,
-    a.active {
-        background: none;
-        color: #0082e6;
-    }
-    #check:checked ~ ul {
-        left: 0;
-    }
-}
