--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,7 +14,13 @@
 }
 .navbar-brand img{
     height: 65px;
+    transition: width 1s, height 4s;
 }
+.navbar-brand img:hover{
+    height: 100px;
+
+}
+
 .navbar-nav li{
     padding: 5px 10px;
     text-align: right;
@@ -77,7 +83,11 @@
 
 }
 
+
 .name{
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
     text-align: left;
     font-size: 65px;
     display: inline;
@@ -92,8 +102,8 @@
     text-shadow: 2px 2px 2px #000000, -2px -2px 2px #000000, 2px -2px 2px #000000, -2px 2px 2px #000000; /* Set the outline using multiple text shadows */
 }
 .img-fluid{
-   height: 550px;
-
+   height: auto;
+    max-width: 100%;
 }
 .intro1{
     font-weight: lighter;
@@ -112,8 +122,33 @@
     height: 40px;
     margin-top: 10px;
     padding-inline: 10px;
+    transition: width 2s, height 2s, transform 2s;
+}
+.logos:hover {
+    width: 40px;
+    height: 40px;
+    transform: rotate(360deg);
+}
 
+@keyframes example {
+    0%   {left:0px; top:0px;}
+    25%  { left:200px; top:0px;}
+    50%  { left:200px; top:200px;}
+    75%  { left:0px; top:200px;}
+    100% { left:0px; top:0px;}
 }
-.col{
-    width: 65%;
+
+@keyframes slide-in {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
+
+.animated_image {
+    animation: slide-in 1s ease-out forwards;
+}
+
+
