--- a/assets/style/homepage.css
+++ b/assets/style/homepage.css
@@ -26,10 +26,14 @@
 home > section {
     position: relative;
 }
+.img{
+    max-width:100%;
+    height:auto;
+}
 home > article {
     display: flex;  width: 30px;
     height: 165px;
-    position: relative;
+
     left: 500px;
     bottom: 155px;
     flex-wrap: wrap;
@@ -58,7 +62,7 @@ section {
 
 
 .name{
-    font-size: 70px;
+    font-size: 90px;
     font-weight: 600;
     font-family: 'Delicious Handrawn', cursive;
     font-family: 'Noto Serif', serif;
@@ -67,16 +71,13 @@ section {
     text-shadow: 2px 2px 2px #000000, -2px -2px 2px #000000, 2px -2px 2px #000000, -2px 2px 2px #47c0a0; /* Set the outline using multiple text shadows */
     padding-left: 150px;
     margin-top: 30px;
-    position: relative;
     animation-name: example;
     animation-duration: 4s;
 }
 /* name animation */
 @keyframes example {
     0%   { left:0px; top:0px;}
-
-    50%  { left:150px; top:200px;}
-
+    25% { left: 20px; top:100px}
     100% { left:0px; top:0px;}
 }
 
@@ -98,11 +99,4 @@ section {
     }
 }
 
-@media (max-width: 600px) {
-    section {
-        -webkit-flex-direction: column;
-        flex-direction: column;
-    }
-
-}
 
