--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,74 +1,4 @@
 
-* {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    box-sizing: border-box;
-    z-index: 1;
-}
-main {
-    position: relative;
-    overflow: hidden;
-}
-
-canvas {
-    display: block;
-    vertical-align: bottom;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100vw;
-    z-index: 0 !important;
-}
-
-/* ---- stats.js ---- */
-
-.count-particles {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13e8e9;
-    font-size: 0.8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-}
-
-.js-count-particles {
-    font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-
-#stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-}
-
-.count-particles {
-    border-radius: 0 0 3px 3px;
-}
-
-/* ---- particles.js container ---- */
-
-
-
-body {
-    font-size: 10px;
-    background-color: #ffffff !important;
-}
 nav {
     z-index: 100;
     /* position: fixed; */
@@ -175,13 +105,14 @@ nav button:focus {
 }
 
 /* nav responsive for tablet  */
-@media  (max-width: 992px){
+@media (min-width: 426px) and (max-width: 992px){
     a.logo {
         font-size: 30px;
         padding-left: 30px;
     }
     nav ul li a {
-        font-size: 16px;
+        font-size: 20px;
+        color: white;
     }
 }
 @media   (max-width: 992px) {
@@ -214,7 +145,7 @@ nav button:focus {
     }
 
     nav ul li a {
-        font-size: 10px;
+        font-size: 20px;
     }
 
     a:hover,
@@ -242,71 +173,6 @@ nav button:focus {
 
     /* nav responsive for mobile */
 
-    @media (min-width: 425px) and (max-width: 768px) {
-        a.logo {
-            font-size: 10px;
-            padding-left: 10px;
-        }
-
-        nav ul li a {
-            font-size: 10px;
-        }
-    }
-    @media (max-width: 992px) {
-        .checkbtn {
-            display: block;
-        }
-
-        .bar {
-            position: absolute;
-            top: 5px;
-            left: 5px;
-            width: 50px;
-        }
-
-        ul {
-            position: fixed;
-            width: 100%;
-            height: 100vh;
-            background: rgba(65, 65, 65, 0.6);
-            top: 60px;
-            left: -100%;
-            text-align: left;
-            transition: all 0.5s;
-        }
-
-        nav ul li {
-            display: block;
-            margin: 50px 0;
-            line-height: 10px;
-        }
-
-        nav ul li a {
-            font-size: 10px;
-        }
-
-        a:hover,
-        a.active {
-            background: none;
-            color: #0082e6;
-        }
-
-        #check:checked ~ ul {
-            left: 0;
-        }
 
 
-        .reveal {
-            position: relative;
-            transform: translateY(150px);
-            opacity: 0;
-            transition: 1s all ease;
-        }
-
-        .reveal.active {
-            transform: translateY(0);
-            opacity: 1;
-        }
-
-    }
 }
