complete home page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,178 +1,4 @@
-
-nav {
-    z-index: 100;
-    /* position: fixed; */
-    height: 60px;
-    width: 100%;
-    display: flex !important;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-/*logo styling */
-a.logo {
-    font-size: 1.5rem;
-    font-family: "Goldman", sans-serif;
-    padding: 0.1rem 1rem;
-    font-weight: bold;
-    margin-bottom: 0;
-    transition: all 300ms ease-in-out;
-    margin-top: 10px;
-}
-/* add logo transitions */
-a.logo:hover{
-    transform: scale(1.05);
-    transition: all 300ms ease-in-out;
-}
-
-nav ul {
-    margin-bottom: 0;
-    margin-right: 20px;
-}
-nav ul li {
-    display: inline-block;
-    margin: 0.5rem;
-    font-weight: 600;
-    font-family: "Inter", sans-serif;
-}
-nav ul li a {
-    text-decoration: none !important;
-    color: black;
-    font-size: 15px;
-    padding: 10px 11px;
-    border-radius: 3px;
-    position: relative;
-    display: inline;
-}
-
-#check:checked ~ ul {
-        left: 0;
-        z-index: 5;
-}
-
-
-
-nav button:hover,
-nav button:focus {
-    transform: scale(1.05);
-    transition: all 300ms ease-in-out;
-}
-
-#menuItem li a:hover,
-#menuItem li a:focus {
-    color: #47c0a0;
-}
-
-#menuItem li a:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    border-radius: 10px;
-    bottom: -3px;
-    left: 0;
-    background-color: #47c0a0;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.15s ease-in-out 0s;
-    transition: all 0.15s ease-in-out 0s;
-}
-
-#menuItem li a:hover:before,
-#menuItem li a.active:before {
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-}
-
-#menuItem li a.active {
-    color: #47c0a0 !important;
-}
-
-.checkbtn {
-    font-size: 30px;
-    color: black;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-
-#check {
-    display: none;
-}
-
-/* nav responsive for tablet  */
-@media (min-width: 426px) and (max-width: 992px){
-    a.logo {
-        font-size: 30px;
-        padding-left: 30px;
-    }
-    nav ul li a {
-        font-size: 20px;
-        color: white;
-    }
-}
-@media   (max-width: 992px) {
-    .checkbtn {
-        display: block;
-    }
-
-    .bar {
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        width: 50px;
-    }
-
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgba(65, 65, 65, 0.6);
-        top: 60px;
-        left: -100%;
-        text-align: left;
-        transition: all 0.5s;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 10px;
-    }
-
-    nav ul li a {
-        font-size: 20px;
-    }
-
-    a:hover,
-    a.active {
-        background: none;
-        color: #0082e6;
-    }
-
-    #check:checked ~ ul {
-        left: 0;
-    }
-
-
-    .reveal {
-        position: relative;
-        transform: translateY(150px);
-        opacity: 0;
-        transition: 1s all ease;
-    }
-
-    .reveal.active {
-        transform: translateY(0);
-        opacity: 1;
-    }
-
-    /* nav responsive for mobile */
-
-
-
+*{
+    margin: 0;
+    padding: 0;
 }
