--- a/assets/style/homepage.css
+++ b/assets/style/homepage.css
@@ -1,91 +1,226 @@
-/* home page components */
-.intro{
-    font-size: 30px;
-    font-weight: 600;
-    color: #000022;
-    font-family: "Comic Sans MS";
-    padding-top: 250px;
-    padding-left: 150px;
-    position: relative;
 
+nav {
+    z-index: 100;
+    /* position: fixed; */
+    height: 60px;
+    width: 100%;
+    display: flex !important;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
-.coloredLetter{
-    color: #47c0a0;
+/*logo styling */
+a.logo {
+    font-size: 1.5rem;
+    font-family: "Goldman", sans-serif;
+    padding: 0.1rem 1rem;
+    font-weight: bold;
+    margin-bottom: 0;
+    transition: all 300ms ease-in-out;
+    margin-top: 10px;
+}
+/* add logo transitions */
+a.logo:hover{
+    transform: scale(1.05);
+    transition: all 300ms ease-in-out;
+}
+
+nav ul {
+    margin-bottom: 0;
+    margin-right: 20px;
+}
+nav ul li {
+    display: inline-block;
+    margin: 0.5rem;
+    font-weight: 600;
+    font-family: "Inter", sans-serif;
+}
+nav ul li a {
+    text-decoration: none !important;
+    color: black;
+    font-size: 15px;
+    padding: 10px 11px;
+    border-radius: 3px;
+    position: relative;
+    display: inline;
+}
+
+#check:checked ~ ul {
+    left: 0;
+    z-index: 5;
+}
+
+
+
+nav button:hover,
+nav button:focus {
+    transform: scale(1.05);
+    transition: all 300ms ease-in-out;
+}
+
+#menuItem li a:hover,
+#menuItem li a:focus {
+    color: mediumblue;
+}
+
+#menuItem li a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 10px;
+    bottom: -3px;
+    left: 0;
+    background-color: mediumblue;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+}
+
+#menuItem li a:hover:before,
+#menuItem li a.active:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+#menuItem li a.active {
+    color:mediumblue !important;
+}
+
+.checkbtn {
+    font-size: 30px;
+    color: black;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+#home-page{
+    height: 100vh;
+    background-image: url("../images/_20230605_090746-removebg-preview (1) (1).png");
+    background-position: right;
+    background-size: 450px;
+    background-repeat: no-repeat;
+}
+.header-text{
+    max-width: 700px;
+    padding-top: 250px;
+    padding-left: 100px;
+}
+.intro {
+    font-size: 30px;
+    font-family: "Comic Sans MS";
+}
+.name{
+    font-family:'Delicious Handrawn', cursive;
+    font-size: 90px;
+    font-weight: bold;
+    color: #ffffff; /* Set the text color */
+    text-shadow: 2px 2px 2px #000000, -2px -2px 2px mediumblue, 2px -2px 2px #000000, -2px 2px 2px mediumblue;
+    margin-top: 10px;
 }
 
 .intro1{
-    font-size: 15px;
-    font-weight: 600;
-    font-family: 'Delicious Handrawn', cursive;
-    font-family: 'Noto Serif', serif;
-    font-family: 'Rubik', sans-serif;
-    color: #000000; /* Set the text color */
-    text-shadow: 2px 2px 2px #ffffff, -2px -2px 2px #ffffff, 2px -2px 2px #ffffff, -2px 2px 2px #47c0a0; /* Set the outline using multiple text shadows */
-    padding-left: 230px;
+    font-family:"Arial Unicode MS";
+    color: #777;
     margin-top: 20px;
-    position: relative;
+    padding-left: 50px;
 }
-
-section {
-    display: -webkit-flex;
-    display: flex;
+.colored-letter{
+    color: red;
+    font-weight: bold;
+}
+.socials img{
+    max-width: 40px;
 }
 .socials{
-    width: 50px;
-    transition: width 2s, height 2s, transform 2s;
-    padding-inline: 5px;
+    padding-left: 200px;
+    margin-top: 20px;
 
 }
-.logos{
-    padding-left: 350px;
-    margin-top: 30px;
-
-
-}
-.socials:hover{
-    width: 50px;
-    height: 50px;
+.icons:hover{
+    width: 40px;
     transform: rotate(360deg);
 }
-
-
-.name{
-    font-size: 90px;
-    font-weight: 600;
-    font-family: 'Delicious Handrawn', cursive;
-    font-family: 'Noto Serif', serif;
-    font-family: 'Rubik', sans-serif;
-    color: #ffffff; /* Set the text color */
-    text-shadow: 2px 2px 2px #000000, -2px -2px 2px #000000, 2px -2px 2px #000000, -2px 2px 2px #47c0a0; /* Set the outline using multiple text shadows */
-    padding-left: 150px;
-    margin-top: 30px;
-    animation-name: example;
-    animation-duration: 4s;
-}
-/* name animation */
-@keyframes example {
-    0%   { left:0px; top:0px;}
-    25% { left: 20px; top:100px}
-    50% { left :50px; top :100px}
-    100% { left:0px; top:0px;}
+.icons{
+    transition: width 2s, height 2s, transform 2s;
+    margin-left: 10px;
 }
 
-.letter-animation {
-    display: inline-block;
-}
-
-.letter-animation span {
-    opacity: 0;
-    animation-name: letter-fade-in;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
-    animation-delay: calc(0.1s * var(--index));
-}
-
-@keyframes letter-fade-in {
-    to {
-        opacity: 1;
+/* nav responsive for tablet  */
+@media (min-width: 768px) and (max-width: 1023px){
+    a.logo {
+        font-size: 30px;
+        padding-left: 30px;
+    }
+    nav ul li a {
+        font-size: 20px;
+        color: white;
     }
 }
+@media   (min-width: 768px) and (max-width: 1023px) {
+    .checkbtn {
+        display: block;
+    }
 
-/* home components responsive for tablet  */
+    .bar {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        width: 50px;
+    }
+
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: rgba(65, 65, 65, 0.6);
+        top: 60px;
+        left: -100%;
+        text-align: left;
+        transition: all 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 10px;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+    }
+
+    a:hover,
+    a.active {
+        background: none;
+        color: #0082e6;
+    }
+
+    #check:checked ~ ul {
+        left: 0;
+    }
+
+
+    .reveal {
+        position: relative;
+        transform: translateY(150px);
+        opacity: 0;
+        transition: 1s all ease;
+    }
+
+    .reveal.active {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+}
