--- a/assets/style/aboutme.css
+++ b/assets/style/aboutme.css
@@ -5,9 +5,10 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    background-image: url("../images/wave1.png"), linear-gradient(to bottom, #ffffff, #777777);
-    background-position: bottom;
-    background-repeat: no-repeat;
+    background-image:  linear-gradient(to bottom, #ffffff, lightslategray, navy);
+    height: 100vh;
+
+
 }
 .about-left-col{
     flex-basis: 50%;
@@ -15,8 +16,9 @@
 .about-left-col img{
     width: 75%;
     clip-path:circle();
-    margin-bottom: 10px;
-    margin-left: 5px;
+    margin-top: 20px;
+    margin-left: 200px;
+    display: flex;
 }
 .about-right-col{
     flex-basis: 50%;
@@ -28,21 +30,29 @@
     text-align: center;
     color: navy;
 }
+.highlight{
+    color: aqua;
+    text-align: center;
+    margin-top: 5px;
+    font-family: "rajdhani";
+    font-size: 20px;
+}
 .description{
     font-size: 18px;
-    font-family: "Arial Unicode MS";
+    font-family: "Century Gothic";
     text-align: center;
     color: white;
     margin-inside: 2px;
 }
 .glass-effect{
-    background: linear-gradient(135deg, rgba(0,0,255,0.1),rgba(255,255,255,0));
+
     -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(50px);
     box-shadow: 0 20px 40px 0 rgba(2, 25, 61);
     border: 1px solid rgba(1,1,255,0.18);
     border-radius: 10px;
-    margin-right: 10px;
+    margin-right: 85px;
+    margin-top: 40px;
 }
 
 
