--- a/assets/style/aboutme.css
+++ b/assets/style/aboutme.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    background-image:  linear-gradient(to bottom, #ffffff, lightslategray, navy);
+   /*  background-image: linear-gradient(to left, white, navy );*/
     height: 100vh;
 
 
@@ -14,7 +14,7 @@
     flex-basis: 50%;
 }
 .about-left-col img{
-    width: 75%;
+    width: 100%;
     clip-path:circle();
     margin-top: 20px;
     margin-left: 200px;
@@ -31,7 +31,7 @@
     color: navy;
 }
 .highlight{
-    color: aqua;
+    color: navy;
     text-align: center;
     margin-top: 5px;
     font-family: "rajdhani";
@@ -41,18 +41,37 @@
     font-size: 18px;
     font-family: "Century Gothic";
     text-align: center;
-    color: white;
+    color: black;
     margin-inside: 2px;
 }
 .glass-effect{
 
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px);
     box-shadow: 0 20px 40px 0 rgba(2, 25, 61);
     border: 1px solid rgba(1,1,255,0.18);
     border-radius: 10px;
     margin-right: 85px;
     margin-top: 40px;
 }
+.button{
+    background-color: navy; /* Green */
+    border-radius: 12px;
+    border: navy;
+    color: greenyellow;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left:100px;
+    margin-top: 40px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
 
 
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(1,1,1,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
