--- a/assets/style/edu.css
+++ b/assets/style/edu.css
@@ -1,10 +1,10 @@
 
 .container {
-    padding: 10px 50px;
+    margin-top: 300px;
     position: relative;
-    width: 50%;
+    width: 25%;
     animation: movedown 1s linear forwards;
-    opacity: 0;
+    opacity: 0;box-shadow: #ff416c;
 }
 
 @keyframes movedown {
@@ -48,11 +48,14 @@
 }
 
 .left-container {
-    left: -100px;
+    left: 300px;
+    margin-top: 100px;
+
 }
 
 .right-container {
     left: 50%;
+    margin-top: 80px;
 }
 
 .container img {
