--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -240,7 +240,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
     box-shadow: -23px -23px 45px #FFFFFF, 28px 28px 50px rgba(13, 39, 80, 0.16);
     border-radius: 15px;
 }
-
+/* button background */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav:nth-child(2) > div > a > i {
     position: relative;
     left: 23%;
@@ -255,7 +255,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
     top: 29%;
     left: 32%;
 }
-
+ /* button icon background */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav > div:hover ,a > i:hover{
     transition: all 0.5s ease;
     -webkit-transform: scale(1.10);
@@ -291,26 +291,17 @@ main > section:first-child > section > div:first-child > div:nth-child(3) {
     border: 6px solid rgba(255, 165, 0, 0.52);
 }
 
-/**
-* main image section in home section
-*/
+
+/* home image */
 main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
-    background: url(../img/MyPhoto.svg);
-    width: 440px;
+    background: url(../image/image-2-removebg-preview.png);
+    width: 478px;
     height: 547px;
     background-size: cover;
     position: relative;
     bottom: 18px;
 }
 
-/**
-* dash line in home section
-*/
-main > section:first-child > section > div:first-child > div:nth-child(5) {
-    position: absolute;
-    right: 169px;
-    top: 131px;
-}
 
 main > section:first-child > section:first-child {
     position: relative;
